--- a/build.gradle
+++ b/build.gradle
@@ -4,26 +4,26 @@
 //
 //  Copyright © 2011–2012 Russel Winder
 
-//  Author:  Russel Winder <russel@russel.org.uk>
+//  Author:  Russel Winder <russel@winder.org.uk>
 
 final isSnapshot = true
 
 allprojects {
   group = 'org.codehaus.jsr166-mirror'
-  final versionRoot = ( new File ( 'version.properties' ) ).text.trim ( )
-  version = versionRoot + ( isSnapshot ? '-SNAPSHOT' : '' )
-  ext.bundleVersion = versionRoot + ( isSnapshot ? '.SNAPSHOT' : '' )
+  final versionRoot = (new File('version.properties')).text.trim()
+  version = versionRoot + (isSnapshot ? '-SNAPSHOT': '')
+  ext.bundleVersion = versionRoot + (isSnapshot ? '.SNAPSHOT': '')
   ext.projectWebsite = 'http://jsr166.codehaus.org'
   //
   //  Gradle currently has facility to append to the bootclasspath but not prepend, which is what is needed
   //  here since some of the JSR166 classes replace ones in the Java distribution, so the JSR 166 classes
   //  must appear earlier in the classpath than the Java distribution ones.  This means we have to provide
-  //  the whole of the bootclasspath, which is going to be a nightmare :-(
+  //  the whole of the bootclasspath, which is going to be a nightmare:-(
   //
   //  http://forums.gradle.org/gradle/topics/gradle_version_of_ants_bootclasspath
   //  http://forums.gradle.org/gradle/topics/can_a_jar_be_prepend_to_the_bootclasspath
   //
-  ext.bootClasspathCollection = files ( '../jsr166/build/libs/jsr166-' + version + '.jar' , System.getenv().JAVA_HOME + '/jre/lib/rt.jar' )
+  ext.bootClasspathCollection = files('../jsr166/build/libs/jsr166-' + version + '.jar', System.getenv().JAVA_HOME + '/jre/lib/rt.jar')
   ext.bootClasspath = bootClasspathCollection.asPath
   //
 }
@@ -32,7 +32,7 @@ subprojects {
   apply plugin: 'java'
   apply plugin: 'osgi'
   apply plugin: 'maven'
-  repositories { mavenCentral ( ) }
+  repositories { mavenCentral() }
   defaultTasks 'build'
 
   configurations {
@@ -45,29 +45,29 @@ subprojects {
   jar {
     manifest {
       version = bundleVersion
-      instruction 'Bundle-Vendor' , theVendor
-      instruction 'Bundle-Description' , group
-      instruction 'Bundle-DocURL' , projectWebsite
-      instruction 'Built-By' , System.properties.'user.name'
-      instruction 'Specification-Version' , bundleVersion
-      instruction 'Specification-Vendor' , theVendor
-      instruction 'Implementation-Version' , bundleVersion
-      instruction 'Implementation-Vendor' , theVendor
-      instruction 'provider' , theVendor
-      instruction 'Export-Package' , "*;version=${version}"
+      instruction 'Bundle-Vendor', theVendor
+      instruction 'Bundle-Description', group
+      instruction 'Bundle-DocURL', projectWebsite
+      instruction 'Built-By', System.properties.'user.name'
+      instruction 'Specification-Version', bundleVersion
+      instruction 'Specification-Vendor', theVendor
+      instruction 'Implementation-Version', bundleVersion
+      instruction 'Implementation-Vendor', theVendor
+      instruction 'provider', theVendor
+      instruction 'Export-Package', "*;version=${version}"
       instruction 'Import-Package', '*;resolution:=optional'
     }
-    task javadocArtifact ( type  : Jar , dependsOn : 'javadoc' ) {
+    task javadocArtifact(type : Jar, dependsOn: 'javadoc') {
       classifier = 'javadoc'
       from docsDir
     }
-    task sourceArtifact ( type : Jar ) {
+    task sourceArtifact(type: Jar) {
       classifier = 'sources'
       //  Specification of the file set is in the per module specification to allow for variant structuring.
     }
     artifacts {
-      archives ( javadocArtifact )
-      archives ( sourceArtifact )
+      archives(javadocArtifact)
+      archives(sourceArtifact)
     }
   }
 
@@ -77,24 +77,24 @@ subprojects {
         uniqueVersion = false
         configuration = configurations.deployJars
 
-        repository ( url : 'https://dav.codehaus.org/repository/jsr166-mirror/' ) {
-          authentication ( userName : codehausUsername , password : codehausPassword )
+        repository(url: 'https://dav.codehaus.org/repository/jsr166-mirror/') {
+          authentication(userName: codehausUsername, password: codehausPassword)
         }
-        snapshotRepository ( url : 'https://dav.codehaus.org/snapshots.repository/jsr166-mirror/' ) {
-          authentication ( userName: codehausUsername , password : codehausPassword )
+        snapshotRepository(url: 'https://dav.codehaus.org/snapshots.repository/jsr166-mirror/') {
+          authentication(userName: codehausUsername, password: codehausPassword)
         }
         /*
-        repository ( url : 'https://nexus.codehaus.org/service/local/staging/deploy/maven2/' ) {
-          authentication ( userName : codehausUsername , password : codehausPassword )
+        repository(url: 'https://nexus.codehaus.org/service/local/staging/deploy/maven2/') {
+          authentication(userName: codehausUsername, password: codehausPassword)
         }
-        snapshotRepository ( url : 'https://nexus.codehaus.org/content/repositories/snapshots/' ) {
-          authentication ( userName : codehausUsername , password : codehausPassword )
+        snapshotRepository(url: 'https://nexus.codehaus.org/content/repositories/snapshots/') {
+          authentication(userName: codehausUsername, password: codehausPassword)
         }
         */
       }
     }
   }
-  catch ( Exception e ) {
+  catch(Exception e) {
     //  If codehausUsername and/or codehausPassword are not defined, do nothing.
   }
 }
@@ -106,7 +106,7 @@ subprojects {
 //  itself so we cannot use the standard Java lifecycle.  Hence break out the TCK as a separate project to
 //  allow for the appropriate dependencies.
 
-project ( ':jsr166' ) {
+project(':jsr166') {
   sourceCompatibility = 6
   targetCompatibility = 6
   sourceSets { main { java { srcDir '../src/main' } } }
@@ -121,9 +121,9 @@ project ( ':jsr166' ) {
     manifest {
       name = 'jsr166'
       symbolicName = 'jsr166'
-      instruction 'Extension-Name' , 'jsr166'
-      instruction 'Specification-Title' , 'JSR166'
-      instruction 'Implementation-Title' , 'JSR166'
+      instruction 'Extension-Name', 'jsr166'
+      instruction 'Specification-Title', 'JSR166'
+      instruction 'Implementation-Title', 'JSR166'
     }
   }
   sourceArtifact { from sourceSets.main.allSource }
@@ -136,10 +136,10 @@ project ( ':jsr166' ) {
 
 //  To save hassle in defining the TCK project, we simply duplicate the compilation in both compileJava and
 //  test tasks.  This saves having to replicate all the test processing which Gradle knows how to do at the
-//  expense of double the compilation and double the disk space.  It also means that :extra166y:test can
+//  expense of double the compilation and double the disk space.  It also means that:extra166y:test can
 //  just depend on the jsr166tck.jar for the dependencies it needs.
 
-project ( ':jsr166tck' ) {
+project(':jsr166tck') {
   sourceCompatibility = 6
   targetCompatibility = 6
   sourceSets {
@@ -147,7 +147,7 @@ project ( ':jsr166tck' ) {
     test { java { srcDir '../src/test/tck' } }
   }
   dependencies { compile 'junit:junit:3.8.2' }
-  compileJava.dependsOn project ( ':jsr166' ).jar
+  compileJava.dependsOn project(':jsr166').jar
   compileJava.options.bootClasspath = bootClasspath
   compileTestJava.options.bootClasspath = bootClasspath
   test.bootstrapClasspath = bootClasspathCollection
@@ -155,53 +155,53 @@ project ( ':jsr166tck' ) {
     manifest {
       name = 'jsr166tck'
       symbolicName = 'jsr166tck'
-      instruction 'Extension-Name' , 'jsr166tck'
-      instruction 'Specification-Title' , 'JSR166 TCK'
-      instruction 'Implementation-Title' , 'JSR166 TCK'
+      instruction 'Extension-Name', 'jsr166tck'
+      instruction 'Specification-Title', 'JSR166 TCK'
+      instruction 'Implementation-Title', 'JSR166 TCK'
     }
   }
   sourceArtifact { from sourceSets.main.allSource }
 }
 
-project ( ':jsr166x' ) {
+project(':jsr166x') {
   sourceCompatibility = 6
   targetCompatibility = 6
   sourceSets { main { java { srcDir '../src/jsr166x' } } }
   // Assume using Java 7 replaces this need.
-  //compileJava.dependsOn project ( ':jsr166' ).jar
+  //compileJava.dependsOn project(':jsr166').jar
   //compileJava.options.bootClasspath = bootClasspath
   jar {
     manifest {
       name = 'jsr166x'
       symbolicName = 'jsr166x'
-      instruction 'Extension-Name' , 'jsr166x'
-      instruction 'Specification-Title' , 'JSR166x'
-      instruction 'Implementation-Title' , 'JSR166x'
+      instruction 'Extension-Name', 'jsr166x'
+      instruction 'Specification-Title', 'JSR166x'
+      instruction 'Implementation-Title', 'JSR166x'
     }
   }
-  sourceArtifact { into ( 'jsr166x' ) { from sourceSets.main.allSource } }
+  sourceArtifact { into('jsr166x') { from sourceSets.main.allSource } }
 }
 
-project ( ':jsr166y' ) {
+project(':jsr166y') {
   sourceCompatibility = 6
   targetCompatibility = 6
   sourceSets { main { java { srcDir '../src/jsr166y' } } }
   // Assume using Java 7 replaces this need.
-  //compileJava.dependsOn project ( ':jsr166' ).jar
+  //compileJava.dependsOn project(':jsr166').jar
   //compileJava.options.bootClasspath = bootClasspath
   jar {
     manifest {
       name = 'jsr166y'
       symbolicName = 'jsr166y'
-      instruction 'Extension-Name' , 'jsr166y'
-      instruction 'Specification-Title' , 'JSR166y'
-      instruction 'Implementation-Title' , 'JSR166y'
+      instruction 'Extension-Name', 'jsr166y'
+      instruction 'Specification-Title', 'JSR166y'
+      instruction 'Implementation-Title', 'JSR166y'
     }
   }
-  sourceArtifact { into ( 'jsr166y' ) { from sourceSets.main.allSource } }
+  sourceArtifact { into('jsr166y') { from sourceSets.main.allSource } }
 }
 
-project ( ':extra166y' ) {
+project(':extra166y') {
   sourceCompatibility = 6
   targetCompatibility = 6
   sourceSets {
@@ -209,7 +209,7 @@ project ( ':extra166y' ) {
     test { java { srcDir '../src/test/extra166y' } }
   }
   // Assume using Java 7 replaces this need.
-  //compileJava.dependsOn project ( ':jsr166' ).jar
+  //compileJava.dependsOn project(':jsr166').jar
   //compileJava.options.bootClasspath = bootClasspath
   //compileTestJava.options.bootClasspath = bootClasspath
   //test.bootstrapClasspath = bootClasspathCollection
@@ -219,22 +219,22 @@ project ( ':extra166y' ) {
     //  At some point in between 1.0-milestone-3 and the 1.0-milestone-4 snapshots, the classes property was
     //  deprecated.  Leave the new versions commented out pending upgrade from 1.0-milestone-3 which doesn't
     //  have the change.
-    compile files ( project ( ':jsr166y' ).sourceSets.main.output )
-    testCompile 'junit:junit:3.8.2', files ( project ( ':jsr166tck' ).sourceSets.main.output )  // The extra166y tests depend on classes in the TCK.
+    compile files(project(':jsr166y').sourceSets.main.output)
+    testCompile 'junit:junit:3.8.2', files(project(':jsr166tck').sourceSets.main.output)  // The extra166y tests depend on classes in the TCK.
   }
   jar {
     manifest {
       name = 'extra166y'
       symbolicName = 'extra166y'
-      instruction 'Extension-Name' , 'extra166y'
-      instruction 'Specification-Title' , 'Extra166y'
-      instruction 'Implementation-Title' , 'Extra166y'
+      instruction 'Extension-Name', 'extra166y'
+      instruction 'Specification-Title', 'Extra166y'
+      instruction 'Implementation-Title', 'Extra166y'
     }
   }
-  sourceArtifact { into ( 'extra166y' ) { from sourceSets.main.allSource } }
+  sourceArtifact { into('extra166y') { from sourceSets.main.allSource } }
 }
 
-project ( ':jsr166e' ) {
+project(':jsr166e') {
   sourceCompatibility = 7
   targetCompatibility = 7
   sourceSets { main { java { srcDir '../src/jsr166e' } } }
@@ -242,18 +242,18 @@ project ( ':jsr166e' ) {
     manifest {
       name = 'jsr166e'
       symbolicName = 'jsr166e'
-      instruction 'Extension-Name' , 'jsr166e'
-      instruction 'Specification-Title' , 'JSR166e'
-      instruction 'Implementation-Title' , 'JSR166e'
+      instruction 'Extension-Name', 'jsr166e'
+      instruction 'Specification-Title', 'JSR166e'
+      instruction 'Implementation-Title', 'JSR166e'
     }
   }
-  sourceArtifact { into ( 'jsr166e' ) { from sourceSets.main.allSource } }
+  sourceArtifact { into('jsr166e') { from sourceSets.main.allSource } }
 }
 
-task clobber ( description : 'Clean all the Gradle subproject directories since they are transient.  All the permanent material is not in the subproject directories.' ) << {
-  childProjects.keySet ( ).each { item -> delete ( item ) }
+task clobber(description: 'Clean all the Gradle subproject directories since they are transient.  All the permanent material is not in the subproject directories.') << {
+  childProjects.keySet().each { item -> delete(item) }
 }
 
-task wrapper ( type : Wrapper ) {
+task wrapper(type: Wrapper) {
     gradleVersion = '1.2'
 }
