--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sat Sep 15 10:58:50 BST 2012
-distributionPath=wrapper/dists
-distributionBase=GRADLE_USER_HOME
+#Mon Jan 14 09:01:52 GMT 2013
 zipStorePath=wrapper/dists
+distributionBase=GRADLE_USER_HOME
+distributionUrl=http\://services.gradle.org/distributions/gradle-1.3-bin.zip
 zipStoreBase=GRADLE_USER_HOME
-distributionUrl=http\://services.gradle.org/distributions/gradle-1.2-bin.zip
+distributionPath=wrapper/dists
